--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bad-words": "^3.0.0",
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0"
+    "bad-words": "^3.0.4",
+    "express": "^4.17.1",
+    "node-emoji": "^1.10.0",
+    "socket.io": "^2.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.19.4"
   }
 }
