--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
-    "express": "^4.17.1",
-    "node-emoji": "^1.10.0",
-    "socket.io": "^2.4.1"
+    "express": "^4.18.2",
+    "node-emoji": "^1.11.0",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.20",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
